[metadata]
name = pybuildtool
version = 2.0.38
description = Build utility to manage web resources.
long_description = file: README.rst
url = https://github.com/dozymoe/PyBuildTool
author = Fahri Reza
author_email = i@dozy.moe
license = MIT
project_urls =
    Bug Tracker = https://github.com/dozymoe/PyBuildTool/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
install_requires =
    pystache
    pyyaml
    stringcase
    watchdog
